src/parser.output
Grammar

    0 $accept: program "end of file"

    1 program: unit

    2 unit: unit type
    3     | unit functor_decl
    4     | unit relation_decl
    5     | unit lattice_decl
    6     | unit lattice_asscoiation
    7     | unit lattice_def
    8     | unit load_head
    9     | unit store_head
   10     | unit fact
   11     | unit rule
   12     | unit component
   13     | unit comp_init
   14     | unit pragma
   15     | %empty

   16 pragma: "pragma directive" "symbol" "symbol"
   17       | "pragma directive" "symbol"

   18 type_id: "identifier"
   19        | type_id "." "identifier"

   20 type: "numeric type declaration" "identifier"
   21     | "symbolic type declaration" "identifier"
   22     | "type declaration" "identifier"
   23     | "type declaration" "identifier" "=" uniontype
   24     | "type declaration" "identifier" "=" "[" recordtype "]"
   25     | "type declaration" "identifier" "=" "[" "]"
   26     | "enum declaration" "identifier" "=" "{" enumtype "}"

   27 recordtype: "identifier" ":" type_id
   28           | recordtype "," "identifier" ":" type_id

   29 uniontype: type_id
   30          | uniontype "|" type_id

   31 enumtype: "case" "symbol"
   32         | enumtype "," "case" "symbol"

   33 rel_id: "identifier"
   34       | rel_id "." "identifier"

   35 non_empty_attributes: "identifier" ":" type_id
   36                     | attributes "," "identifier" ":" type_id

   37 attributes: non_empty_attributes
   38           | %empty

   39 qualifiers: qualifiers "relation qualifier output"
   40           | qualifiers "relation qualifier input"
   41           | qualifiers "relation qualifier printsize"
   42           | qualifiers "relation qualifier overidable"
   43           | qualifiers "relation qualifier inline"
   44           | qualifiers "BRIE datastructure qualifier"
   45           | qualifiers "BTREE datastructure qualifier"
   46           | qualifiers "equivalence relation qualifier"
   47           | %empty

   48 functor_decl: "functor declaration" "identifier" "(" functor_typeargs ")" ":" functor_type
   49             | "functor declaration" "identifier" "(" ")" ":" functor_type

   50 functor_type: "identifier"

   51 functor_typeargs: functor_type "," functor_typeargs
   52                 | functor_type

   53 relation_decl: "relation declaration" relation_list

   54 relation_list: relation_body
   55              | "identifier" "," relation_list

   56 relation_body: "identifier" "(" attributes ")" qualifiers

   57 lattice_decl: "lattice declaration" relation_list

   58 lattice_asscoiation: "lattice components type declaration" "identifier" "<" ">" "=" "(" "symbol" "," "symbol" "," "identifier" "," "identifier" ")"

   59 lattice_def: "lattice binary function definition" "identifier" "(" "identifier" ":" "identifier" "," "identifier" ":" "identifier" ")" ":" "identifier" "{" lattice_def_type "}"

   60 lattice_def_type: "case" "(" arg "," arg ")" "=>" arg
   61                 | lattice_def_type "," "case" "(" arg "," arg ")" "=>" arg
   62                 | lattice_def_type "," "case" "_" "=>" arg

   63 non_empty_key_value_pairs: "identifier" "=" "symbol"
   64                          | key_value_pairs "," "identifier" "=" "symbol"
   65                          | "identifier" "=" "identifier"
   66                          | key_value_pairs "," "identifier" "=" "identifier"
   67                          | "identifier" "=" "true literal constraint"
   68                          | key_value_pairs "," "identifier" "=" "true literal constraint"
   69                          | "identifier" "=" "false literal constraint"
   70                          | key_value_pairs "," "identifier" "=" "false literal constraint"

   71 key_value_pairs: non_empty_key_value_pairs
   72                | %empty

   73 load_head: "input directives declaration" iodirective_list

   74 store_head: "output directives declaration" iodirective_list
   75           | "printsize directives declaration" iodirective_list

   76 iodirective_list: iodirective_body
   77                 | "identifier" "," iodirective_list

   78 iodirective_body: rel_id "(" key_value_pairs ")"
   79                 | rel_id

   80 arg: "symbol"
   81    | "_"
   82    | "$"
   83    | "@" "identifier" functor_list
   84    | "&" "identifier" "(" arg "," arg ")"
   85    | "identifier"
   86    | "number"
   87    | "(" arg ")"
   88    | arg "bor" arg
   89    | arg "bxor" arg
   90    | arg "band" arg
   91    | arg "lor" arg
   92    | arg "land" arg
   93    | arg "+" arg
   94    | arg "-" arg
   95    | arg "*" arg
   96    | arg "/" arg
   97    | arg "%" arg
   98    | arg "^" arg
   99    | "max aggregator" "(" arg "," arg ")"
  100    | "min aggregator" "(" arg "," arg ")"
  101    | "concatenation of two strings" "(" arg "," arg ")"
  102    | "ordinal number of a string" "(" arg ")"
  103    | "length of a string" "(" arg ")"
  104    | "convert string to number" "(" arg ")"
  105    | "convert number to string" "(" arg ")"
  106    | "sub-string of a string" "(" arg "," arg "," arg ")"
  107    | condition "?" arg ":" arg
  108    | arg "type cast" "identifier"
  109    | "-" arg
  110    | "bnot" arg
  111    | "lnot" arg
  112    | "[" "]"
  113    | "[" recordlist "]"
  114    | "nil reference"
  115    | "count aggregator" ":" atom
  116    | "count aggregator" ":" "{" body "}"
  117    | "sum aggregator" arg ":" atom
  118    | "sum aggregator" arg ":" "{" body "}"
  119    | "min aggregator" arg ":" atom
  120    | "min aggregator" arg ":" "{" body "}"
  121    | "max aggregator" arg ":" atom
  122    | "max aggregator" arg ":" "{" body "}"
  123    | "reserved keyword" "(" arg ")"

  124 condition: arg "=" arg
  125          | arg "!" "=" arg
  126          | arg "<" arg
  127          | arg "<" "=" arg
  128          | arg ">" arg
  129          | arg ">" "=" arg

  130 functor_list: "(" ")"
  131             | "(" functor_args ")"

  132 functor_args: arg
  133             | functor_args "," arg

  134 recordlist: arg
  135           | recordlist "," arg

  136 non_empty_arg_list: arg
  137                   | arg_list "," arg

  138 arg_list: non_empty_arg_list
  139         | %empty

  140 atom: rel_id "(" arg_list ")"

  141 literal: arg "relational operator" arg
  142        | arg "<" arg
  143        | arg ">" arg
  144        | arg "=" arg
  145        | atom
  146        | "match predicate" "(" arg "," arg ")"
  147        | "checks whether substring is contained in a string" "(" arg "," arg ")"
  148        | "true literal constraint"
  149        | "false literal constraint"

  150 fact: atom "."

  151 head: atom
  152     | head "," atom

  153 term: literal
  154     | "!" term
  155     | "(" disjunction ")"

  156 conjunction: term
  157            | conjunction "," term

  158 disjunction: conjunction
  159            | disjunction ";" conjunction

  160 body: disjunction

  161 exec_order_list: "number"
  162                | exec_order_list "," "number"

  163 exec_order: "(" exec_order_list ")"

  164 exec_plan_list: "number" ":" exec_order
  165               | exec_plan_list "," "number" ":" exec_order

  166 exec_plan: "plan keyword" exec_plan_list

  167 rule_def: head ":-" body "."

  168 rule: rule_def
  169     | rule "strict marker"
  170     | rule exec_plan

  171 type_param_list: "identifier"
  172                | type_param_list "," type_id

  173 type_params: %empty
  174            | "<" type_param_list ">"

  175 comp_type: "identifier" type_params

  176 component_head: "component declaration" comp_type
  177               | component_head ":" comp_type
  178               | component_head "," comp_type

  179 component_body: component_body type
  180               | component_body relation_decl
  181               | component_body load_head
  182               | component_body store_head
  183               | component_body fact
  184               | component_body rule
  185               | component_body comp_override
  186               | component_body component
  187               | component_body comp_init
  188               | %empty

  189 component: component_head "{" component_body "}"

  190 comp_init: "component instantiation" "identifier" "=" comp_type

  191 comp_override: "override rules of super-component" "identifier"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"reserved keyword" (258) 123
"symbol" (259) 16 17 31 32 58 63 64 80
"identifier" (260) 18 19 20 21 22 23 24 25 26 27 28 33 34 35 36 48
    49 50 55 56 58 59 63 64 65 66 67 68 69 70 77 83 84 85 108 171 175
    190 191
"number" (261) 86 161 162 164 165
"relational operator" (262) 141
"pragma directive" (263) 16 17
"relation qualifier output" (264) 39
"relation qualifier input" (265) 40
"relation qualifier printsize" (266) 41
"BRIE datastructure qualifier" (267) 44
"BTREE datastructure qualifier" (268) 45
"equivalence relation qualifier" (269) 46
"relation qualifier overidable" (270) 42
"relation qualifier inline" (271) 43
"match predicate" (272) 146
"checks whether substring is contained in a string" (273) 147
"concatenation of two strings" (274) 101
"ordinal number of a string" (275) 102
"length of a string" (276) 103
"sub-string of a string" (277) 106
"min aggregator" (278) 100 119 120
"max aggregator" (279) 99 121 122
"count aggregator" (280) 115 116
"sum aggregator" (281) 117 118
"true literal constraint" (282) 67 68 148
"false literal constraint" (283) 69 70 149
"strict marker" (284) 169
"plan keyword" (285) 166
":-" (286) 167
"relation declaration" (287) 53
"lattice declaration" (288) 57
"lattice components type declaration" (289) 58
"lattice binary function definition" (290) 59
"functor declaration" (291) 48 49
"input directives declaration" (292) 73
"output directives declaration" (293) 74
"printsize directives declaration" (294) 75
"override rules of super-component" (295) 191
"type declaration" (296) 22 23 24 25
"enum declaration" (297) 26
"component declaration" (298) 176
"component instantiation" (299) 190
"numeric type declaration" (300) 20
"symbolic type declaration" (301) 21
"convert string to number" (302) 104
"convert number to string" (303) 105
"type cast" (304) 108
"nil reference" (305) 114
"|" (306) 30
"[" (307) 24 25 112 113
"]" (308) 24 25 112 113
"_" (309) 62 81
"$" (310) 82
"+" (311) 93
"-" (312) 94 109
"!" (313) 125 154
"?" (314) 107
"(" (315) 48 49 56 58 59 60 61 78 84 87 99 100 101 102 103 104 105
    106 123 130 131 140 146 147 155 163
")" (316) 48 49 56 58 59 60 61 78 84 87 99 100 101 102 103 104 105
    106 123 130 131 140 146 147 155 163
"," (317) 28 32 36 51 55 58 59 60 61 62 64 66 68 70 77 84 99 100 101
    106 133 135 137 146 147 152 157 162 165 172 178
":" (318) 27 28 35 36 48 49 59 107 115 116 117 118 119 120 121 122
    164 165 177
";" (319) 159
"." (320) 19 34 150 167
"=>" (321) 60 61 62
"=" (322) 23 24 25 26 58 63 64 65 66 67 68 69 70 124 125 127 129 144
    190
"*" (323) 95
"@" (324) 83
"&" (325) 84
"/" (326) 96
"^" (327) 98
"%" (328) 97
"{" (329) 26 59 116 118 120 122 189
"}" (330) 26 59 116 118 120 122 189
"<" (331) 58 126 127 142 174
">" (332) 58 128 129 143 174
"band" (333) 90
"bor" (334) 88
"bxor" (335) 89
"bnot" (336) 110
"land" (337) 92
"lor" (338) 91
"lnot" (339) 111
"case" (340) 31 32 60 61 62
NEG (341)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
program (88)
    on left: 1, on right: 0
unit (89)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15, on right: 1 2 3 4 5
    6 7 8 9 10 11 12 13 14
pragma (90)
    on left: 16 17, on right: 14
type_id (91)
    on left: 18 19, on right: 19 27 28 29 30 35 36 172
type (92)
    on left: 20 21 22 23 24 25 26, on right: 2 179
recordtype (93)
    on left: 27 28, on right: 24 28
uniontype (94)
    on left: 29 30, on right: 23 30
enumtype (95)
    on left: 31 32, on right: 26 32
rel_id (96)
    on left: 33 34, on right: 34 78 79 140
non_empty_attributes (97)
    on left: 35 36, on right: 37
attributes (98)
    on left: 37 38, on right: 36 56
qualifiers (99)
    on left: 39 40 41 42 43 44 45 46 47, on right: 39 40 41 42 43 44
    45 46 56
functor_decl (100)
    on left: 48 49, on right: 3
functor_type (101)
    on left: 50, on right: 48 49 51 52
functor_typeargs (102)
    on left: 51 52, on right: 48 51
relation_decl (103)
    on left: 53, on right: 4 180
relation_list (104)
    on left: 54 55, on right: 53 55 57
relation_body (105)
    on left: 56, on right: 54
lattice_decl (106)
    on left: 57, on right: 5
lattice_asscoiation (107)
    on left: 58, on right: 6
lattice_def (108)
    on left: 59, on right: 7
lattice_def_type (109)
    on left: 60 61 62, on right: 59 61 62
non_empty_key_value_pairs (110)
    on left: 63 64 65 66 67 68 69 70, on right: 71
key_value_pairs (111)
    on left: 71 72, on right: 64 66 68 70 78
load_head (112)
    on left: 73, on right: 8 181
store_head (113)
    on left: 74 75, on right: 9 182
iodirective_list (114)
    on left: 76 77, on right: 73 74 75 77
iodirective_body (115)
    on left: 78 79, on right: 76
arg (116)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
    98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121 122 123, on right: 60 61 62 84 87 88
    89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108 109 110 111 117 118 119 120 121 122 123 124 125 126 127 128
    129 132 133 134 135 136 137 141 142 143 144 146 147
condition (117)
    on left: 124 125 126 127 128 129, on right: 107
functor_list (118)
    on left: 130 131, on right: 83
functor_args (119)
    on left: 132 133, on right: 131 133
recordlist (120)
    on left: 134 135, on right: 113 135
non_empty_arg_list (121)
    on left: 136 137, on right: 138
arg_list (122)
    on left: 138 139, on right: 137 140
atom (123)
    on left: 140, on right: 115 117 119 121 145 150 151 152
literal (124)
    on left: 141 142 143 144 145 146 147 148 149, on right: 153
fact (125)
    on left: 150, on right: 10 183
head (126)
    on left: 151 152, on right: 152 167
term (127)
    on left: 153 154 155, on right: 154 156 157
conjunction (128)
    on left: 156 157, on right: 157 158 159
disjunction (129)
    on left: 158 159, on right: 155 159 160
body (130)
    on left: 160, on right: 116 118 120 122 167
exec_order_list (131)
    on left: 161 162, on right: 162 163
exec_order (132)
    on left: 163, on right: 164 165
exec_plan_list (133)
    on left: 164 165, on right: 165 166
exec_plan (134)
    on left: 166, on right: 170
rule_def (135)
    on left: 167, on right: 168
rule (136)
    on left: 168 169 170, on right: 11 169 170 184
type_param_list (137)
    on left: 171 172, on right: 172 174
type_params (138)
    on left: 173 174, on right: 175
comp_type (139)
    on left: 175, on right: 176 177 178 190
component_head (140)
    on left: 176 177 178, on right: 177 178 189
component_body (141)
    on left: 179 180 181 182 183 184 185 186 187 188, on right: 179
    180 181 182 183 184 185 186 187 189
component (142)
    on left: 189, on right: 12 186
comp_init (143)
    on left: 190, on right: 13 187
comp_override (144)
    on left: 191, on right: 185


State 0

    0 $accept: . program "end of file"

    $default  reduce using rule 15 (unit)

    program  go to state 1
    unit     go to state 2


State 1

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 program: unit .
    2 unit: unit . type
    3     | unit . functor_decl
    4     | unit . relation_decl
    5     | unit . lattice_decl
    6     | unit . lattice_asscoiation
    7     | unit . lattice_def
    8     | unit . load_head
    9     | unit . store_head
   10     | unit . fact
   11     | unit . rule
   12     | unit . component
   13     | unit . comp_init
   14     | unit . pragma

    "identifier"                           shift, and go to state 4
    "pragma directive"                     shift, and go to state 5
    "relation declaration"                 shift, and go to state 6
    "lattice declaration"                  shift, and go to state 7
    "lattice components type declaration"  shift, and go to state 8
    "lattice binary function definition"   shift, and go to state 9
    "functor declaration"                  shift, and go to state 10
    "input directives declaration"         shift, and go to state 11
    "output directives declaration"        shift, and go to state 12
    "printsize directives declaration"     shift, and go to state 13
    "type declaration"                     shift, and go to state 14
    "enum declaration"                     shift, and go to state 15
    "component declaration"                shift, and go to state 16
    "component instantiation"              shift, and go to state 17
    "numeric type declaration"             shift, and go to state 18
    "symbolic type declaration"            shift, and go to state 19

    $default  reduce using rule 1 (program)

    pragma               go to state 20
    type                 go to state 21
    rel_id               go to state 22
    functor_decl         go to state 23
    relation_decl        go to state 24
    lattice_decl         go to state 25
    lattice_asscoiation  go to state 26
    lattice_def          go to state 27
    load_head            go to state 28
    store_head           go to state 29
    atom                 go to state 30
    fact                 go to state 31
    head                 go to state 32
    rule_def             go to state 33
    rule                 go to state 34
    component_head       go to state 35
    component            go to state 36
    comp_init            go to state 37


State 3

    0 $accept: program "end of file" .

    $default  accept


State 4

   33 rel_id: "identifier" .

    $default  reduce using rule 33 (rel_id)


State 5

   16 pragma: "pragma directive" . "symbol" "symbol"
   17       | "pragma directive" . "symbol"

    "symbol"  shift, and go to state 38


State 6

   53 relation_decl: "relation declaration" . relation_list

    "identifier"  shift, and go to state 39

    relation_list  go to state 40
    relation_body  go to state 41


State 7

   57 lattice_decl: "lattice declaration" . relation_list

    "identifier"  shift, and go to state 39

    relation_list  go to state 42
    relation_body  go to state 41


State 8

   58 lattice_asscoiation: "lattice components type declaration" . "identifier" "<" ">" "=" "(" "symbol" "," "symbol" "," "identifier" "," "identifier" ")"

    "identifier"  shift, and go to state 43


State 9

   59 lattice_def: "lattice binary function definition" . "identifier" "(" "identifier" ":" "identifier" "," "identifier" ":" "identifier" ")" ":" "identifier" "{" lattice_def_type "}"

    "identifier"  shift, and go to state 44


State 10

   48 functor_decl: "functor declaration" . "identifier" "(" functor_typeargs ")" ":" functor_type
   49             | "functor declaration" . "identifier" "(" ")" ":" functor_type

    "identifier"  shift, and go to state 45


State 11

   73 load_head: "input directives declaration" . iodirective_list

    "identifier"  shift, and go to state 46

    rel_id            go to state 47
    iodirective_list  go to state 48
    iodirective_body  go to state 49


State 12

   74 store_head: "output directives declaration" . iodirective_list

    "identifier"  shift, and go to state 46

    rel_id            go to state 47
    iodirective_list  go to state 50
    iodirective_body  go to state 49


State 13

   75 store_head: "printsize directives declaration" . iodirective_list

    "identifier"  shift, and go to state 46

    rel_id            go to state 47
    iodirective_list  go to state 51
    iodirective_body  go to state 49


State 14

   22 type: "type declaration" . "identifier"
   23     | "type declaration" . "identifier" "=" uniontype
   24     | "type declaration" . "identifier" "=" "[" recordtype "]"
   25     | "type declaration" . "identifier" "=" "[" "]"

    "identifier"  shift, and go to state 52


State 15

   26 type: "enum declaration" . "identifier" "=" "{" enumtype "}"

    "identifier"  shift, and go to state 53


State 16

  176 component_head: "component declaration" . comp_type

    "identifier"  shift, and go to state 54

    comp_type  go to state 55


State 17

  190 comp_init: "component instantiation" . "identifier" "=" comp_type

    "identifier"  shift, and go to state 56


State 18

   20 type: "numeric type declaration" . "identifier"

    "identifier"  shift, and go to state 57


State 19

   21 type: "symbolic type declaration" . "identifier"

    "identifier"  shift, and go to state 58


State 20

   14 unit: unit pragma .

    $default  reduce using rule 14 (unit)


State 21

    2 unit: unit type .

    $default  reduce using rule 2 (unit)


State 22

   34 rel_id: rel_id . "." "identifier"
  140 atom: rel_id . "(" arg_list ")"

    "("  shift, and go to state 59
    "."  shift, and go to state 60


State 23

    3 unit: unit functor_decl .

    $default  reduce using rule 3 (unit)


State 24

    4 unit: unit relation_decl .

    $default  reduce using rule 4 (unit)


State 25

    5 unit: unit lattice_decl .

    $default  reduce using rule 5 (unit)


State 26

    6 unit: unit lattice_asscoiation .

    $default  reduce using rule 6 (unit)


State 27

    7 unit: unit lattice_def .

    $default  reduce using rule 7 (unit)


State 28

    8 unit: unit load_head .

    $default  reduce using rule 8 (unit)


State 29

    9 unit: unit store_head .

    $default  reduce using rule 9 (unit)


State 30

  150 fact: atom . "."
  151 head: atom .

    "."  shift, and go to state 61

    $default  reduce using rule 151 (head)


State 31

   10 unit: unit fact .

    $default  reduce using rule 10 (unit)


State 32

  152 head: head . "," atom
  167 rule_def: head . ":-" body "."

    ":-"  shift, and go to state 62
    ","   shift, and go to state 63


State 33

  168 rule: rule_def .

    $default  reduce using rule 168 (rule)


State 34

   11 unit: unit rule .
  169 rule: rule . "strict marker"
  170     | rule . exec_plan

    "strict marker"  shift, and go to state 64
    "plan keyword"   shift, and go to state 65

    $default  reduce using rule 11 (unit)

    exec_plan  go to state 66


State 35

  177 component_head: component_head . ":" comp_type
  178               | component_head . "," comp_type
  189 component: component_head . "{" component_body "}"

    ","  shift, and go to state 67
    ":"  shift, and go to state 68
    "{"  shift, and go to state 69


State 36

   12 unit: unit component .

    $default  reduce using rule 12 (unit)


State 37

   13 unit: unit comp_init .

    $default  reduce using rule 13 (unit)


State 38

   16 pragma: "pragma directive" "symbol" . "symbol"
   17       | "pragma directive" "symbol" .

    "symbol"  shift, and go to state 70

    $default  reduce using rule 17 (pragma)


State 39

   55 relation_list: "identifier" . "," relation_list
   56 relation_body: "identifier" . "(" attributes ")" qualifiers

    "("  shift, and go to state 71
    ","  shift, and go to state 72


State 40

   53 relation_decl: "relation declaration" relation_list .

    $default  reduce using rule 53 (relation_decl)


State 41

   54 relation_list: relation_body .

    $default  reduce using rule 54 (relation_list)


State 42

   57 lattice_decl: "lattice declaration" relation_list .

    $default  reduce using rule 57 (lattice_decl)


State 43

   58 lattice_asscoiation: "lattice components type declaration" "identifier" . "<" ">" "=" "(" "symbol" "," "symbol" "," "identifier" "," "identifier" ")"

    "<"  shift, and go to state 73


State 44

   59 lattice_def: "lattice binary function definition" "identifier" . "(" "identifier" ":" "identifier" "," "identifier" ":" "identifier" ")" ":" "identifier" "{" lattice_def_type "}"

    "("  shift, and go to state 74


State 45

   48 functor_decl: "functor declaration" "identifier" . "(" functor_typeargs ")" ":" functor_type
   49             | "functor declaration" "identifier" . "(" ")" ":" functor_type

    "("  shift, and go to state 75


State 46

   33 rel_id: "identifier" .
   77 iodirective_list: "identifier" . "," iodirective_list

    ","  shift, and go to state 76

    $default  reduce using rule 33 (rel_id)


State 47

   34 rel_id: rel_id . "." "identifier"
   78 iodirective_body: rel_id . "(" key_value_pairs ")"
   79                 | rel_id .

    "("  shift, and go to state 77
    "."  shift, and go to state 60

    $default  reduce using rule 79 (iodirective_body)


State 48

   73 load_head: "input directives declaration" iodirective_list .

    $default  reduce using rule 73 (load_head)


State 49

   76 iodirective_list: iodirective_body .

    $default  reduce using rule 76 (iodirective_list)


State 50

   74 store_head: "output directives declaration" iodirective_list .

    $default  reduce using rule 74 (store_head)


State 51

   75 store_head: "printsize directives declaration" iodirective_list .

    $default  reduce using rule 75 (store_head)


State 52

   22 type: "type declaration" "identifier" .
   23     | "type declaration" "identifier" . "=" uniontype
   24     | "type declaration" "identifier" . "=" "[" recordtype "]"
   25     | "type declaration" "identifier" . "=" "[" "]"

    "="  shift, and go to state 78

    $default  reduce using rule 22 (type)


State 53

   26 type: "enum declaration" "identifier" . "=" "{" enumtype "}"

    "="  shift, and go to state 79


State 54

  175 comp_type: "identifier" . type_params

    "<"  shift, and go to state 80

    $default  reduce using rule 173 (type_params)

    type_params  go to state 81


State 55

  176 component_head: "component declaration" comp_type .

    $default  reduce using rule 176 (component_head)


State 56

  190 comp_init: "component instantiation" "identifier" . "=" comp_type

    "="  shift, and go to state 82


State 57

   20 type: "numeric type declaration" "identifier" .

    $default  reduce using rule 20 (type)


State 58

   21 type: "symbolic type declaration" "identifier" .

    $default  reduce using rule 21 (type)


State 59

  140 atom: rel_id "(" . arg_list ")"

    "reserved keyword"              shift, and go to state 83
    "symbol"                        shift, and go to state 84
    "identifier"                    shift, and go to state 85
    "number"                        shift, and go to state 86
    "concatenation of two strings"  shift, and go to state 87
    "ordinal number of a string"    shift, and go to state 88
    "length of a string"            shift, and go to state 89
    "sub-string of a string"        shift, and go to state 90
    "min aggregator"                shift, and go to state 91
    "max aggregator"                shift, and go to state 92
    "count aggregator"              shift, and go to state 93
    "sum aggregator"                shift, and go to state 94
    "convert string to number"      shift, and go to state 95
    "convert number to string"      shift, and go to state 96
    "nil reference"                 shift, and go to state 97
    "["                             shift, and go to state 98
    "_"                             shift, and go to state 99
    "$"                             shift, and go to state 100
    "-"                             shift, and go to state 101
    "("                             shift, and go to state 102
    "@"                             shift, and go to state 103
    "&"                             shift, and go to state 104
    "bnot"                          shift, and go to state 105
    "lnot"                          shift, and go to state 106

    $default  reduce using rule 139 (arg_list)

    arg                 go to state 107
    condition           go to state 108
    non_empty_arg_list  go to state 109
    arg_list            go to state 110


State 60

   34 rel_id: rel_id "." . "identifier"

    "identifier"  shift, and go to state 111


State 61

  150 fact: atom "." .

    $default  reduce using rule 150 (fact)


State 62

  167 rule_def: head ":-" . body "."

    "reserved keyword"                                   shift, and go to state 83
    "symbol"                                             shift, and go to state 84
    "identifier"                                         shift, and go to state 112
    "number"                                             shift, and go to state 86
    "match predicate"                                    shift, and go to state 113
    "checks whether substring is contained in a string"  shift, and go to state 114
    "concatenation of two strings"                       shift, and go to state 87
    "ordinal number of a string"                         shift, and go to state 88
    "length of a string"                                 shift, and go to state 89
    "sub-string of a string"                             shift, and go to state 90
    "min aggregator"                                     shift, and go to state 91
    "max aggregator"                                     shift, and go to state 92
    "count aggregator"                                   shift, and go to state 93
    "sum aggregator"                                     shift, and go to state 94
    "true literal constraint"                            shift, and go to state 115
    "false literal constraint"                           shift, and go to state 116
    "convert string to number"                           shift, and go to state 95
    "convert number to string"                           shift, and go to state 96
    "nil reference"                                      shift, and go to state 97
    "["                                                  shift, and go to state 98
    "_"                                                  shift, and go to state 99
    "$"                                                  shift, and go to state 100
    "-"                                                  shift, and go to state 101
    "!"                                                  shift, and go to state 117
    "("                                                  shift, and go to state 118
    "@"                                                  shift, and go to state 103
    "&"                                                  shift, and go to state 104
    "bnot"                                               shift, and go to state 105
    "lnot"                                               shift, and go to state 106

    rel_id       go to state 22
    arg          go to state 119
    condition    go to state 108
    atom         go to state 120
    literal      go to state 121
    term         go to state 122
    conjunction  go to state 123
    disjunction  go to state 124
    body         go to state 125


State 63

  152 head: head "," . atom

    "identifier"  shift, and go to state 4

    rel_id  go to state 22
    atom    go to state 126


State 64

  169 rule: rule "strict marker" .

    $default  reduce using rule 169 (rule)


State 65

  166 exec_plan: "plan keyword" . exec_plan_list

    "number"  shift, and go to state 127

    exec_plan_list  go to state 128


State 66

  170 rule: rule exec_plan .

    $default  reduce using rule 170 (rule)


State 67

  178 component_head: component_head "," . comp_type

    "identifier"  shift, and go to state 54

    comp_type  go to state 129


State 68

  177 component_head: component_head ":" . comp_type

    "identifier"  shift, and go to state 54

    comp_type  go to state 130


State 69

  189 component: component_head "{" . component_body "}"

    $default  reduce using rule 188 (component_body)

    component_body  go to state 131


State 70

   16 pragma: "pragma directive" "symbol" "symbol" .

    $default  reduce using rule 16 (pragma)


State 71

   56 relation_body: "identifier" "(" . attributes ")" qualifiers

    "identifier"  shift, and go to state 132

    $default  reduce using rule 38 (attributes)

    non_empty_attributes  go to state 133
    attributes            go to state 134


State 72

   55 relation_list: "identifier" "," . relation_list

    "identifier"  shift, and go to state 39

    relation_list  go to state 135
    relation_body  go to state 41


State 73

   58 lattice_asscoiation: "lattice components type declaration" "identifier" "<" . ">" "=" "(" "symbol" "," "symbol" "," "identifier" "," "identifier" ")"

    ">"  shift, and go to state 136


State 74

   59 lattice_def: "lattice binary function definition" "identifier" "(" . "identifier" ":" "identifier" "," "identifier" ":" "identifier" ")" ":" "identifier" "{" lattice_def_type "}"

    "identifier"  shift, and go to state 137


State 75

   48 functor_decl: "functor declaration" "identifier" "(" . functor_typeargs ")" ":" functor_type
   49             | "functor declaration" "identifier" "(" . ")" ":" functor_type

    "identifier"  shift, and go to state 138
    ")"           shift, and go to state 139

    functor_type      go to state 140
    functor_typeargs  go to state 141


State 76

   77 iodirective_list: "identifier" "," . iodirective_list

    "identifier"  shift, and go to state 46

    rel_id            go to state 47
    iodirective_list  go to state 142
    iodirective_body  go to state 49


State 77

   78 iodirective_body: rel_id "(" . key_value_pairs ")"

    "identifier"  shift, and go to state 143

    $default  reduce using rule 72 (key_value_pairs)

    non_empty_key_value_pairs  go to state 144
    key_value_pairs            go to state 145


State 78

   23 type: "type declaration" "identifier" "=" . uniontype
   24     | "type declaration" "identifier" "=" . "[" recordtype "]"
   25     | "type declaration" "identifier" "=" . "[" "]"

    "identifier"  shift, and go to state 146
    "["           shift, and go to state 147

    type_id    go to state 148
    uniontype  go to state 149


State 79

   26 type: "enum declaration" "identifier" "=" . "{" enumtype "}"

    "{"  shift, and go to state 150


State 80

  174 type_params: "<" . type_param_list ">"

    "identifier"  shift, and go to state 151

    type_param_list  go to state 152


State 81

  175 comp_type: "identifier" type_params .

    $default  reduce using rule 175 (comp_type)


State 82

  190 comp_init: "component instantiation" "identifier" "=" . comp_type

    "identifier"  shift, and go to state 54

    comp_type  go to state 153


State 83

  123 arg: "reserved keyword" . "(" arg ")"

    "("  shift, and go to state 154


State 84

   80 arg: "symbol" .

    $default  reduce using rule 80 (arg)


State 85

   85 arg: "identifier" .

    $default  reduce using rule 85 (arg)


State 86

   86 arg: "number" .

    $default  reduce using rule 86 (arg)


State 87

  101 arg: "concatenation of two strings" . "(" arg "," arg ")"

    "("  shift, and go to state 155


State 88

  102 arg: "ordinal number of a string" . "(" arg ")"

    "("  shift, and go to state 156


State 89

  103 arg: "length of a string" . "(" arg ")"

    "("  shift, and go to state 157


State 90

  106 arg: "sub-string of a string" . "(" arg "," arg "," arg ")"

    "("  shift, and go to state 158


State 91

  100 arg: "min aggregator" . "(" arg "," arg ")"
  119    | "min aggregator" . arg ":" atom
  120    | "min aggregator" . arg ":" "{" body "}"

    "reserved keyword"              shift, and go to state 83
    "symbol"                        shift, and go to state 84
    "identifier"                    shift, and go to state 85
    "number"                        shift, and go to state 86
    "concatenation of two strings"  shift, and go to state 87
    "ordinal number of a string"    shift, and go to state 88
    "length of a string"            shift, and go to state 89
    "sub-string of a string"        shift, and go to state 90
    "min aggregator"                shift, and go to state 91
    "max aggregator"                shift, and go to state 92
    "count aggregator"              shift, and go to state 93
    "sum aggregator"                shift, and go to state 94
    "convert string to number"      shift, and go to state 95
    "convert number to string"      shift, and go to state 96
    "nil reference"                 shift, and go to state 97
    "["                             shift, and go to state 98
    "_"                             shift, and go to state 99
    "$"                             shift, and go to state 100
    "-"                             shift, and go to state 101
    "("                             shift, and go to state 159
    "@"                             shift, and go to state 103
    "&"                             shift, and go to state 104
    "bnot"                          shift, and go to state 105
    "lnot"                          shift, and go to state 106

    arg        go to state 160
    condition  go to state 108


State 92

   99 arg: "max aggregator" . "(" arg "," arg ")"
  121    | "max aggregator" . arg ":" atom
  122    | "max aggregator" . arg ":" "{" body "}"
